# Bloom-platform

./: Dockerfile  README.md  docker-compose.yml  main.py  migrate.bat  migrate.py  pyproject.toml  run_migrate.py
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py
